Display Resume Page

--- a/angular-client/tsconfig.json
+++ b/angular-client/tsconfig.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
     "strict": true,
+    "strictPropertyInitialization": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
@@ -16,7 +17,14 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "ES2022",
+    "paths": {
+      "@core/*": [ "./src/app/core/*" ],
+      "@environment/*": [ "./src/environments/*" ],
+      "@pages/*": [ "./src/app/pages/*" ],      
+      "@shared/*": [ "./src/app/shared/*" ],
+      "@store/*": [ "./src/app/store/*" ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
